fix: ajout d'un z-index 99999 pour cause de problèmes avec les elements bootstrap

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,6 +33,10 @@ main {
     background-size: cover;
 }
 
+header {
+    z-index: 99999;
+}
+
 .main-content {
     padding: 20px;
     background: white;
